--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,6 +17,8 @@ on:
 
 env:
   CURL_OPT: "--no-progress-meter --connect-timeout 30 --retry 20 --retry-delay 10"
+  CURL_ACC: "Accept: application/vnd.github.v3+json"
+  URI: "https://api.github.com"
   PW: "https://patchwork.kernel.org/api/1.2"
 
 permissions: {}
