--- a/.github/workflows/build-validation.yml
+++ b/.github/workflows/build-validation.yml
@@ -239,6 +239,7 @@ jobs:
 
       - name: get commit info
         id: commit
+        if: needs.build.result == 'failure'
         run: |
           cat <<'EOF' > commit.json
           ${{ toJSON(github.event.head_commit) }}
@@ -269,6 +270,7 @@ jobs:
           echo "committer=${COMMITTER}" >> ${GITHUB_OUTPUT}
 
       - name: send email
+        if: needs.build.result == 'failure'
         uses: dawidd6/action-send-mail@v3
         with:
           server_address: smtp.gmail.com
