gh: notif: use last items
That what we were doing in tests:set_patchwork_check.

Signed-off-by: Matthieu Baerts (NGI0) <matttbe@kernel.org>

--- a/.github/workflows/build-validation.yml
+++ b/.github/workflows/build-validation.yml
@@ -254,7 +254,7 @@ jobs:
           # Query Patchwork to get cover-letter and full subject
           if [ -n "${MID}" ]; then
             curl "${URL_PW}${MID:1:-1}" > pw_patch.json || true
-            URL_PW_SERIES=$(jq -er '.[0].series.[0].url' pw_patch.json || true)
+            URL_PW_SERIES=$(jq -er 'last(last(.[].series)[].url)' pw_patch.json || true)
             if [ -n "${URL_PW_SERIES}" ] && [ "${URL_PW_SERIES}" != "null" ]; then
               CL="$(curl "${URL_PW_SERIES}" | jq '.cover_letter' || true)"
               if [ -n "${CL}" ] && [ "${CL}" != "null" ] && [ "${CL}" != "{}" ]; then
