--- a/.github/workflows/build-validation.yml
+++ b/.github/workflows/build-validation.yml
@@ -256,6 +256,7 @@ jobs:
             curl "${URL_PW}${MID:1:-1}" > pw_patch.json || true
             URL_PW_SERIES=$(jq -er 'last(last(.[].series)[].url)' pw_patch.json || true)
             if [ -n "${URL_PW_SERIES}" ] && [ "${URL_PW_SERIES}" != "null" ]; then
+              echo "series=https://patchwork.kernel.org/project/mptcp/list/?series=$(basename "${URL_PW_SERIES}")" >> ${GITHUB_OUTPUT}
               CL="$(curl "${URL_PW_SERIES}" | jq '.cover_letter' || true)"
               if [ -n "${CL}" ] && [ "${CL}" != "null" ] && [ "${CL}" != "{}" ]; then
                 MID=$(echo "${CL}" | jq -er '.msgid' || echo "${MID}")
@@ -317,6 +318,7 @@ jobs:
             Status: ${{ needs.build.result }}
             Initiator: ${{ steps.commit.outputs.committer }}
             Commits: ${{ github.server_url }}/${{ github.repository }}/commits/${{ steps.commit.outputs.sha }}
+            Patchwork: ${{ steps.commit.outputs.series }}
 
             Feel free to reply to this email if you cannot access logs, if you need
             some support to fix the error, if this doesn't seem to be caused by your
