--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -282,21 +282,21 @@ jobs:
         id: series
         if: startswith(github.ref, 'refs/tags/patchew/')
         run: |
-          # Query Patchwork to get cover-letter and full subject
           if [ -n "${MID:1:-1}" ]; then
-            curl "${URL_PW}${MID:1:-1}" > pw_patch.json || true
-            URL_PW_SERIES=$(jq -er 'last(last(.[].series)[].url)' pw_patch.json || true)
-            if [ -n "${URL_PW_SERIES}" ] && [ "${URL_PW_SERIES}" != "null" ]; then
-              echo "series=https://patchwork.kernel.org/project/mptcp/list/?series=$(basename "${URL_PW_SERIES}")" >> ${GITHUB_OUTPUT}
-              CL="$(curl "${URL_PW_SERIES}" | jq '.cover_letter' || true)"
-              if [ -n "${CL}" ] && [ "${CL}" != "null" ] && [ "${CL}" != "{}" ]; then
-                MID=$(echo "${CL}" | jq -er '.msgid' || echo "${MID}")
-                SUBJECT=$(echo "${CL}" | jq -er '.name' || echo "${SUBJECT}")
-              else
-                # to get the full subject
-                SUBJECT=$(jq -er '.[0].name' pw_patch.json || echo "${SUBJECT}")
+            # get cover-letter and series' name if any
+            URL_PW_SERIES_API=$(curl "${URL_PW}${MID:1:-1}" | jq -er 'last(last(.[].series)[].url)' || true)
+            if [ -n "${URL_PW_SERIES_API}" ] && [ "${URL_PW_SERIES_API}" != "null" ]; then
+              echo "series=${URL_PW_SERIES}$(basename "${URL_PW_SERIES_API}")" >> ${GITHUB_OUTPUT}
+              if curl "${URL_PW_SERIES_API}" > pw_series.json && [ test -s pw_series.json ]; then
+                CL="$(jq '.cover_letter' pw_series.json || true)"
+                if [ -n "${CL}" ] && [ "${CL}" != "null" ] && [ "${CL}" != "{}" ]; then
+                  MID=$(echo "${CL}" | jq -er '.msgid' || echo "${MID}")
+                  SUBJECT=$(jq -er '.name' pw_series.json || echo "${SUBJECT}")
+                fi
               fi
             fi
+            # get tags from Lore: not fully available from Patchwork
+            SUBJECT="$(curl "${URL_LORE//MID/${MID:1:-1}}" | grep '^Subject: ' | head -n1 | sed 's/^Subject: \(\[.*\] \).*/\1/')${SUBJECT}"
           fi
 
           echo "Found message ID: '${MID}'"
@@ -305,6 +305,8 @@ jobs:
           echo "subject=${SUBJECT}" >> ${GITHUB_OUTPUT}
         env:
           URL_PW: "${{ env.PW }}/patches/?project=mptcp&msgid="
+          URL_PW_SERIES: "https://patchwork.kernel.org/project/mptcp/list/?series="
+          URL_LORE: "https://lore.kernel.org/mptcp/MID/raw"
           MID: "<${{ steps.commit.outputs.mid }}>"
           SUBJECT: "${{ steps.commit.outputs.subject }}"
 
