--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -143,7 +143,7 @@ jobs:
   notif:
     name: "Notifications"
     needs: tests
-    # only for the official repo (patchew)
+    # only for the official repo (patchew and export)
     if: always() && github.repository_owner == 'multipath-tcp'
     concurrency:
       group: ${{ startswith(github.ref, 'refs/heads/export') && 'ci-notif' || github.sha }}
@@ -397,3 +397,33 @@ jobs:
             Cheers,
             MPTCP GH Action bot
             Bot operated by Matthieu Baerts (NGI0 Core)
+
+  status:
+    name: "Status"
+    needs: tests
+    # only for the non official repos
+    if: always() && github.repository_owner != 'multipath-tcp'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/download-artifact@v4
+        with:
+          pattern: results-*
+          merge-multiple: false
+
+      - name: Check Status
+        run: |
+          issues=()
+          for mode in normal debug btf; do
+            ccl="results-${mode}/conclusion.txt"
+            if [ ! -f "${ccl}" ] || ! grep -q "Success" "${ccl}"; then
+              issues+=("${mode}")
+            fi
+          done
+          if [ ${#issues[@]} -eq 0 ]; then
+            echo "Great, no issues!"
+            exit 0
+          fi
+          echo "Issues have been found during the tests in: ${issues[*]}."
+          echo "Please check the summary page for more details:"
+          echo "  ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+          exit 1
